--- a/views/r.haml
+++ b/views/r.haml
@@ -1,13 +1,70 @@
 %h1 Jeffery N. Beck
+%strong jeffnbeck@gmail.com
 %hr
-%h2 UNIX Systems Administrator
-%h2 Ruby Web Developer
+%h2
+  %ul
+    %li Linux/Unix Systems Administrator
+    %li Ruby/Postgresql Web Developer
 %hr
 %ul
-  %li Solaris
-  %li Ruby
-  %li Red Hat
-  %li Postgresql
-  %li Juniper Netscreen and SSL VPN
-  %li DNS, DHCP, LDAP
+  %li
+    %em Systems
+    %ul
+      %li Red Hat
+      %li Solaris
+      %li Juniper Netscreen Firewall &amp; SSL VPN
+  %li
+    %em Languages
+    %ul
+      %li Ruby
+      %li PHP
+  %li
+    %em Applications
+    %ul
+      %li Postgresql
+      %li Sun Java Messaging System
+      %li Apache, DNS, DHCP, FTP, LDAP
 %hr
+%strong Experience
+%ul
+  %li
+    %strong Senior Linux/Unix Systems Administrator
+    %br
+    %em Mount Sinai Medical Center
+    %br
+    %em July 2000 - Present
+    %ul
+      %li Created, managed, and updated internal web applications.
+      %ul
+        %li An account management application enabling the help desk and other ID administators to create/edit/delete accounts on multiple Active Directory or other LDAP directories. This application used Ruby on Rails, Javascript, Memcached, and Postgresql.
+        %li A ticket tracking system using Ruby on Rails, Javascript, Memcached, and Postgresql. The ticketing system is integrated into the account management application.
+        %li A cabling installation request &amp; repair management and tracking.
+      These applications are used by a wide variety of internal groups, including not IT groups. Column-level database auditing and multiple levels of user access were integrated into all applications.
+      %li Support over 100 Linux or Solaris machines running various applications such as Weblogic, Bind DNS/DHCP, Apache, Postgresql, Oracle.
+      %li Support Juniper SSL VPN and Netscreen Firewalls.
+      %li Manage mail gateway and various internal mail servers.
+      %li Manage internal and external DNS.
+  %li
+    %strong AIX Systems Administrator
+    %br
+    %em Southern Westchester Boces
+    %br
+    %em April 1999 - June 2000
+    %ul
+      %li Managed 9 IBM AIX RS6000s, supporting 50 financial and student databases for various school districts and city offices.
+      %li Provided technical support for thousands of printers and users accross multiple network topologies.
+  %li
+    %strong Network Specialist
+    %br
+    %em Southern Westchester Boces
+    %br
+    %em April 1998 - April 1999
+    %ul
+      %li Planned and installed various 100 to 1000 node Windows NT based networks.
+%hr
+%strong Education
+%ul
+  %li
+    %strong City University of New York at Hunter College
+    %br
+    %em Computer Science
