--- a/views/resume.haml
+++ b/views/resume.haml
@@ -1,10 +1,15 @@
 %h1 Jeffery N. Beck
-%strong jeffnbeck@gmail.com
+%ul
+  %li
+    %strong http://jeffbeck.org
+  %li
+    %strong jeffnbeck@gmail.com
 %hr
-%h2
-  %ul
-    %li Linux/Unix Systems Administrator
-    %li Ruby/Postgresql Web Developer
+%ul
+  %li
+    %strong Linux/Unix Systems Administrator
+  %li
+    %strong Ruby/Postgresql Web Developer
 %hr
 %ul
   %li
@@ -12,7 +17,7 @@
     %ul
       %li Red Hat
       %li Solaris
-      %li Juniper Netscreen Firewall &amp; SSL VPN
+      %li Juniper Firewall &amp; VPN
   %li
     %em Languages
     %ul
@@ -23,7 +28,7 @@
     %ul
       %li Postgresql
       %li Sun Java Messaging System
-      %li Apache, DNS, DHCP, FTP, LDAP
+      %li Apache HTTPD, Bind DNS &amp; DHCP, Proftpd, OpenLDAP
 %hr
 %strong Experience
 %ul
@@ -37,7 +42,7 @@
       %li Created, managed, and updated internal web applications.
       %ul
         %li An account management application enabling the help desk and other ID administators to create/edit/delete accounts on multiple Active Directory or other LDAP directories. This application used Ruby on Rails, Javascript, Memcached, and Postgresql.
-        %li A ticket tracking system using Ruby on Rails, Javascript, Memcached, and Postgresql. The ticketing system is integrated into the account management application.
+        %li A ticket tracking system integrated into the account management application.
         %li A cabling installation request &amp; repair management and tracking.
       These applications are used by a wide variety of internal groups, including not IT groups. Column-level database auditing and multiple levels of user access were integrated into all applications.
       %li Support over 100 Linux or Solaris machines running various applications such as Weblogic, Bind DNS/DHCP, Apache, Postgresql, Oracle.
@@ -60,7 +65,7 @@
     %br
     %em April 1998 - April 1999
     %ul
-      %li Planned and installed various 100 to 1000 node Windows NT based networks.
+      %li Planned and installed various 100 to 1000 node Windows NT based networks for schools and city offices.
 %hr
 %strong Education
 %ul
