--- a/views/resume.haml
+++ b/views/resume.haml
@@ -79,10 +79,11 @@
               %li Installed and managed 5,000 user Sun Java System Messaging System.
               %li
                 Rolled out and managed multiple mail gateways:
-                %ul
-                  %li Proofpoint Messaging Security Gateway
-                  %li Postfix with Spamassassin
-                  %li PMDF with PreciseMail
+                .resumeSubSection
+                  %ul
+                    %li Proofpoint Messaging Security Gateway
+                    %li Postfix with Spamassassin
+                    %li PMDF with PreciseMail
               %li.experiment
                 Rolled out and managed multiple DNS systems:
                 .resumeSubSection
