--- a/views/resume.haml
+++ b/views/resume.haml
@@ -77,7 +77,7 @@
               %li Systems administrator for over 100 Linux and Solaris machines running a wide variety of software, and part of a team providing 24x7 support.
               %li Manage Juniper SSL VPN and Netscreen Firewalls supporting local and remote locations.
               %li Installed and managed 5,000 user Sun Java System Messaging System.
-              %li
+              %li.experiment
                 Rolled out and managed multiple mail gateways:
                 .resumeSubSection
                   %ul
