--- a/views/resume.haml
+++ b/views/resume.haml
@@ -81,9 +81,9 @@
                 Rolled out and managed multiple mail gateways:
                 .resumeSubSection
                   %ul
-                    %li Proofpoint Messaging Security Gateway
-                    %li Postfix with Spamassassin
-                    %li PMDF with PreciseMail
+                    %li - Proofpoint Messaging Security Gateway
+                    %li - Postfix with Spamassassin
+                    %li - PMDF with PreciseMail
               %li.experiment
                 Rolled out and managed multiple DNS systems:
                 .resumeSubSection
