--- a/views/resume.haml
+++ b/views/resume.haml
@@ -55,12 +55,12 @@
           %li.experience.vevent.vcard
             .vcardHeader
               %span.title Senior Linux/UNIX Systems Administrator
+              %span.org Mount Sinai Medical Center,
+              %span.location New York, NY
+            .vcardAdditionalHeader
               %span.date_duration
                 %abbr.dtstart{:title => "2000-07-01"} July 2000 - 
                 %abbr.dtend Present
-            .vcardAdditionalHeader
-              %span.org Mount Sinai Medical Center
-              %span.location New York, NY
             %ul.description
               %li.experiment
                 Created, managed, and updated several web applications.
@@ -93,7 +93,7 @@
                     %li - BIND
           %li.experience.vevent.vcard
             %span.title AIX Systems Administrator
-            %span.org Southern Westchester BOCES
+            %span.org Southern Westchester BOCES,
             %span.location Elmsford, NY
             .date_duration
               %abbr.dtstart{:title => "1999-04-01"} April 1999 - 
@@ -104,7 +104,7 @@
               %li Managed Netscape Mail Server
           %li.experience.vevent.vcard
             %span.title Network Specialist
-            %span.org Southern Westchester BOCES
+            %span.org Southern Westchester BOCES,
             %span.location Elmsford, NY
             .date_duration
               %abbr.dtstart{:title => "1998-04-01"} April 1998 - 
