Gemfile, more renaming

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/stylesheets/reset.css' }
-    %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/stylesheets/becked.css' }
-    %title jeffbeck.net
+    %link{ :rel => 'stylesheet', :type => 'text/css', :href => '/stylesheets/resume.css' }
+    %title jeffbeck.org
   %body
     = yield
